--- a/Makefile.am
+++ b/Makefile.am
@@ -274,22 +274,22 @@ IDLEJITTER_PLUGIN_FILES = \
     collectors/idlejitter.plugin/plugin_idlejitter.c \
     $(NULL)
 
-if ENABLE_LOGSMANAGEMENT
-LOGSMANAGEMENT_PLUGIN_FILES = \
-    collectors/logsmanagement.plugin/plugin_logsmanagement.c \
-    collectors/logsmanagement.plugin/plugin_logsmanagement.h \
-    collectors/logsmanagement.plugin/plugin_logsmanagement_docker_ev.c \
-    collectors/logsmanagement.plugin/plugin_logsmanagement_docker_ev.h \
-    collectors/logsmanagement.plugin/plugin_logsmanagement_systemd.c \
-    collectors/logsmanagement.plugin/plugin_logsmanagement_systemd.h \
-    collectors/logsmanagement.plugin/plugin_logsmanagement_kernel.c \
-    collectors/logsmanagement.plugin/plugin_logsmanagement_kernel.h \
-    collectors/logsmanagement.plugin/plugin_logsmanagement_web_log.c \
-    collectors/logsmanagement.plugin/plugin_logsmanagement_web_log.h \
-    collectors/logsmanagement.plugin/plugin_logsmanagement_generic.c \
-    collectors/logsmanagement.plugin/plugin_logsmanagement_generic.h \
-    $(NULL)
-endif
+# if ENABLE_LOGSMANAGEMENT
+# LOGSMANAGEMENT_PLUGIN_FILES = \
+#     collectors/logsmanagement.plugin/plugin_logsmanagement.c \
+#     collectors/logsmanagement.plugin/plugin_logsmanagement.h \
+#     collectors/logsmanagement.plugin/plugin_logsmanagement_docker_ev.c \
+#     collectors/logsmanagement.plugin/plugin_logsmanagement_docker_ev.h \
+#     collectors/logsmanagement.plugin/plugin_logsmanagement_systemd.c \
+#     collectors/logsmanagement.plugin/plugin_logsmanagement_systemd.h \
+#     collectors/logsmanagement.plugin/plugin_logsmanagement_kernel.c \
+#     collectors/logsmanagement.plugin/plugin_logsmanagement_kernel.h \
+#     collectors/logsmanagement.plugin/plugin_logsmanagement_web_log.c \
+#     collectors/logsmanagement.plugin/plugin_logsmanagement_web_log.h \
+#     collectors/logsmanagement.plugin/plugin_logsmanagement_generic.c \
+#     collectors/logsmanagement.plugin/plugin_logsmanagement_generic.h \
+#     $(NULL)
+# endif
 
 CGROUPS_PLUGIN_FILES = \
     collectors/cgroups.plugin/sys_fs_cgroup.c \
@@ -934,6 +934,19 @@ MONGODB_EXPORTING_FILES = \
 
 if ENABLE_LOGSMANAGEMENT
 LOGSMANAGEMENT_FILES = \
+    logsmanagement/rrd_api/rrd_api_docker_ev.c \
+    logsmanagement/rrd_api/rrd_api_docker_ev.h \
+    logsmanagement/rrd_api/rrd_api_generic.c \
+    logsmanagement/rrd_api/rrd_api_generic.h \
+    logsmanagement/rrd_api/rrd_api_kernel.c \
+    logsmanagement/rrd_api/rrd_api_kernel.h \
+    logsmanagement/rrd_api/rrd_api_stats.c \
+    logsmanagement/rrd_api/rrd_api_stats.h \
+    logsmanagement/rrd_api/rrd_api_systemd.c \
+    logsmanagement/rrd_api/rrd_api_systemd.h \
+    logsmanagement/rrd_api/rrd_api_web_log.c \
+    logsmanagement/rrd_api/rrd_api_web_log.h \
+    logsmanagement/rrd_api/rrd_api.h \
     logsmanagement/circular_buffer.c \
     logsmanagement/circular_buffer.h \
     logsmanagement/compression.c \
@@ -1116,7 +1129,7 @@ NETDATA_FILES = \
     $(HEALTH_PLUGIN_FILES) \
     $(ML_FILES) \
     $(IDLEJITTER_PLUGIN_FILES) \
-    $(LOGSMANAGEMENT_PLUGIN_FILES) \
+    # $(LOGSMANAGEMENT_PLUGIN_FILES) \
     $(PLUGINSD_PLUGIN_FILES) \
     $(REGISTRY_PLUGIN_FILES) \
     $(RRD_PLUGIN_FILES) \
