--- a/collectors/charts.d.plugin/apcupsd/metadata.yaml
+++ b/collectors/charts.d.plugin/apcupsd/metadata.yaml
@@ -1,163 +1,98 @@
-name: apcupsd
-title: COLLECTORNAME Monitoring
-duplicate_for_virtual_integrations:
-  list:
-    - '[Ubuntu](link to ubuntu)'
-    - '[Redhat](link to redhat)'
-overview:
-  operation:
-    description: This collector periodically does http requests to one or more {[Apache](link
-      to collector)} (<- CI will remove the curly brackets, they are for replacing
-      with the virtual integrations, to replace the link each time) web servers to
-      collect the metrics mod_status plugin that apache exposes
-  platforms:
-    description: If this collector can't run on some platforms specify them here and
-      set it to false, otherwise set this to true and this text will not be rendered,
-      instead a templated message will appear
-    use_templated_text: true
-  multi-instance:
-    boolean: true
-  permissions:
-    description: if there are any notable permission requirements, eg running as root
-      and so on, specify them here and set it to false, otherwise set it to true and
-      a templated message will appear
-    use_templated_text: true
-  related:
-    description: give a simple description if there are any other collectors related
-      to this collector. Example -> To get the most out of your apache servers, you
-      can monitor its processes for resources utilization and their log files to turn
-      them into real-time metrics. Check our related resources for more information.
-      (if not, leave empty)
-setup:
-  prerequisites:
-    list:
-      - title: Prerequisite title for heading
-        text: List like with dashes, TBD, use | and newline for multiline
-  behavior:
-    auto_detection:
-      description: The collector auto-detects apache web servers running on localhost
-        ports 80, 443, and 8080.
-    limits:
-      description: The collector is limited to x amount of tables or any other limitation,
-        leave empty if none
-    impact:
-      description: Is there any impact on the application when using the default configuration?
-        Maybe on a db collector having to many tables might slow down the db if collection
-        happens per second, leave empty if none
-  configuration:
-    file:
-      description: 'which file the user has to edit. Example: go.d/apache.conf'
-    options:
-      description: TBD, use | and newline for multiline
-      folding:
-        title: Config options
-        enabled: true
-      list:
-        - name: option name
-          description: option description
-          default: a number or a string
-          required: true or false
-    examples:
-      folding:
-        title: Config
-        enabled: false
-      list:
-        - name: Basic / else describe what this example is about
-          description: A basic example configuration / describe your example
-          data: input the example data in yaml format
-troubleshooting:
-  problems:
-    list:
-      - name: possible troubleshooting title
-        text: describe
-  debugging:
-    description: How to run this in debug mode? Use | and newline with indent, to
-      write in markdown
-  logs:
-    description: How can I monitor logs for this plugin?
-related_resources:
-  integrations:
-    list:
-      - apache
-      - weblog
-      - httpcheck
-      - etc
-    provide:
-      description: What info I can provide for other plugins that reference me? this
-        will only be visible in their end, they will scrape this text. Example ->
-        apps.plugin allows monitoring individual processes CPU, Memory, Disk I/O and
-        many more resources utilization.
+module_name: apcupsd
+plugin_name: charts.d.plugin
 alerts:
-  - name: '[apcupsd_ups_charge](https://gihtub.com/netdata/netdata/blob/master/health/health.d/apcupsd.conf)'
+  - name: apcupsd_ups_charge
+    link: https://github.com/netdata/netdata/blob/master/health/health.d/apcupsd.conf
     metric: apcupsd.charge
     info: average UPS charge over the last minute
     os: '*'
-  - name: '[apcupsd_10min_ups_load](https://gihtub.com/netdata/netdata/blob/master/health/health.d/apcupsd.conf)'
+  - name: apcupsd_10min_ups_load
+    link: https://github.com/netdata/netdata/blob/master/health/health.d/apcupsd.conf
     metric: apcupsd.load
     info: average UPS load over the last 10 minutes
     os: '*'
 metrics:
-  description: some description for this section, or leave empty
   folding:
     title: Metrics
     enabled: false
-  scope:
-    ups:
-      name: ups
-      description: TBD
+  description: ''
+  availability: []
+  scopes:
+    - name: ups
+      description: ''
       labels: []
       metrics:
         - name: apcupsd.charge
+          availability: []
           description: UPS Charge
           unit: percentage
+          chart_type: area
           dimensions:
             - name: charge
         - name: apcupsd.battery.voltage
+          availability: []
           description: UPS Battery Voltage
           unit: Volts
+          chart_type: line
           dimensions:
             - name: voltage
             - name: nominal
         - name: apcupsd.input.voltage
+          availability: []
           description: UPS Input Voltage
           unit: Volts
+          chart_type: line
           dimensions:
             - name: voltage
             - name: min
             - name: max
         - name: apcupsd.output.voltage
+          availability: []
           description: UPS Output Voltage
           unit: Volts
+          chart_type: line
           dimensions:
             - name: absolute
             - name: nominal
         - name: apcupsd.input.frequency
+          availability: []
           description: UPS Input Voltage
           unit: Hz
+          chart_type: line
           dimensions:
             - name: frequency
         - name: apcupsd.load
+          availability: []
           description: UPS Load
           unit: percentage
+          chart_type: area
           dimensions:
             - name: load
         - name: apcupsd.load_usage
+          availability: []
           description: UPS Load Usage
           unit: Watts
+          chart_type: area
           dimensions:
             - name: load
         - name: apcupsd.temperature
+          availability: []
           description: UPS Temperature
           unit: Celsius
+          chart_type: line
           dimensions:
             - name: temp
         - name: apcupsd.time
+          availability: []
           description: UPS Time Remaining
           unit: Minutes
+          chart_type: area
           dimensions:
             - name: time
         - name: apcupsd.online
+          availability: []
           description: UPS ONLINE flag
           unit: boolean
+          chart_type: line
           dimensions:
             - name: online
