--- a/collectors/python.d.plugin/beanstalk/metadata.yaml
+++ b/collectors/python.d.plugin/beanstalk/metadata.yaml
@@ -1,130 +1,52 @@
-name: beanstalk
-title: COLLECTORNAME Monitoring
-duplicate_for_virtual_integrations:
-  list:
-    - '[Ubuntu](link to ubuntu)'
-    - '[Redhat](link to redhat)'
-overview:
-  operation:
-    description: This collector periodically does http requests to one or more {[Apache](link
-      to collector)} (<- CI will remove the curly brackets, they are for replacing
-      with the virtual integrations, to replace the link each time) web servers to
-      collect the metrics mod_status plugin that apache exposes
-  platforms:
-    description: If this collector can't run on some platforms specify them here and
-      set it to false, otherwise set this to true and this text will not be rendered,
-      instead a templated message will appear
-    use_templated_text: true
-  multi-instance:
-    boolean: true
-  permissions:
-    description: if there are any notable permission requirements, eg running as root
-      and so on, specify them here and set it to false, otherwise set it to true and
-      a templated message will appear
-    use_templated_text: true
-  related:
-    description: give a simple description if there are any other collectors related
-      to this collector. Example -> To get the most out of your apache servers, you
-      can monitor its processes for resources utilization and their log files to turn
-      them into real-time metrics. Check our related resources for more information.
-      (if not, leave empty)
-setup:
-  prerequisites:
-    list:
-      - title: Prerequisite title for heading
-        text: List like with dashes, TBD, use | and newline for multiline
-  behavior:
-    auto_detection:
-      description: The collector auto-detects apache web servers running on localhost
-        ports 80, 443, and 8080.
-    limits:
-      description: The collector is limited to x amount of tables or any other limitation,
-        leave empty if none
-    impact:
-      description: Is there any impact on the application when using the default configuration?
-        Maybe on a db collector having to many tables might slow down the db if collection
-        happens per second, leave empty if none
-  configuration:
-    file:
-      description: 'which file the user has to edit. Example: go.d/apache.conf'
-    options:
-      description: TBD, use | and newline for multiline
-      folding:
-        title: Config options
-        enabled: true
-      list:
-        - name: option name
-          description: option description
-          default: a number or a string
-          required: true or false
-    examples:
-      folding:
-        title: Config
-        enabled: false
-      list:
-        - name: Basic / else describe what this example is about
-          description: A basic example configuration / describe your example
-          data: input the example data in yaml format
-troubleshooting:
-  problems:
-    list:
-      - name: possible troubleshooting title
-        text: describe
-  debugging:
-    description: How to run this in debug mode? Use | and newline with indent, to
-      write in markdown
-  logs:
-    description: How can I monitor logs for this plugin?
-related_resources:
-  integrations:
-    list:
-      - apache
-      - weblog
-      - httpcheck
-      - etc
-    provide:
-      description: What info I can provide for other plugins that reference me? this
-        will only be visible in their end, they will scrape this text. Example ->
-        apps.plugin allows monitoring individual processes CPU, Memory, Disk I/O and
-        many more resources utilization.
+module_name: beanstalk
+plugin_name: python.d.plugin
 alerts:
-  - name: '[beanstalk_server_buried_jobs](https://gihtub.com/netdata/netdata/blob/master/health/health.d/beanstalkd.conf)'
+  - name: beanstalk_server_buried_jobs
+    link: https://github.com/netdata/netdata/blob/master/health/health.d/beanstalkd.conf
     metric: beanstalk.current_jobs
     info: number of buried jobs across all tubes. You need to manually kick them so
       they can be processed. Presence of buried jobs in a tube does not affect new
       jobs.
     os: freebsd
 metrics:
-  description: some description for this section, or leave empty
   folding:
     title: Metrics
     enabled: false
-  scope:
-    global:
-      name: global
-      description: TBD
+  description: ''
+  availability: []
+  scopes:
+    - name: global
+      description: ''
       labels: []
       metrics:
         - name: beanstalk.cpu_usage
+          availability: []
           description: Cpu Usage
           unit: cpu time
+          chart_type: area
           dimensions:
             - name: user
             - name: system
         - name: beanstalk.jobs_rate
+          availability: []
           description: Jobs Rate
           unit: jobs/s
+          chart_type: line
           dimensions:
             - name: total
             - name: timeouts
         - name: beanstalk.connections_rate
+          availability: []
           description: Connections Rate
           unit: connections/s
+          chart_type: area
           dimensions:
             - name: connections
         - name: beanstalk.commands_rate
+          availability: []
           description: Commands Rate
           unit: commands/s
+          chart_type: stacked
           dimensions:
             - name: put
             - name: peek
@@ -146,13 +68,17 @@ metrics:
             - name: list-tubes-watched
             - name: pause-tube
         - name: beanstalk.connections_rate
+          availability: []
           description: Current Tubes
           unit: tubes
+          chart_type: area
           dimensions:
             - name: tubes
         - name: beanstalk.current_jobs
+          availability: []
           description: Current Jobs
           unit: jobs
+          chart_type: stacked
           dimensions:
             - name: urgent
             - name: ready
@@ -160,37 +86,46 @@ metrics:
             - name: delayed
             - name: buried
         - name: beanstalk.current_connections
+          availability: []
           description: Current Connections
           unit: connections
+          chart_type: line
           dimensions:
             - name: written
             - name: producers
             - name: workers
             - name: waiting
         - name: beanstalk.binlog
+          availability: []
           description: Binlog
           unit: records/s
+          chart_type: line
           dimensions:
             - name: written
             - name: migrated
         - name: beanstalk.uptime
+          availability: []
           description: seconds
           unit: seconds
+          chart_type: line
           dimensions:
             - name: uptime
-    tube:
-      name: tube
-      description: TBD
+    - name: tube
+      description: ''
       labels: []
       metrics:
         - name: beanstalk.jobs_rate
+          availability: []
           description: Jobs Rate
           unit: jobs/s
+          chart_type: area
           dimensions:
             - name: jobs
         - name: beanstalk.jobs
+          availability: []
           description: Jobs
           unit: jobs
+          chart_type: stacked
           dimensions:
             - name: urgent
             - name: ready
@@ -198,21 +133,27 @@ metrics:
             - name: delayed
             - name: buried
         - name: beanstalk.connections
+          availability: []
           description: Connections
           unit: connections
+          chart_type: stacked
           dimensions:
             - name: using
             - name: waiting
             - name: watching
         - name: beanstalk.commands
+          availability: []
           description: Commands
           unit: commands/s
+          chart_type: stacked
           dimensions:
             - name: deletes
             - name: pauses
         - name: beanstalk.pause
+          availability: []
           description: Pause
           unit: seconds
+          chart_type: stacked
           dimensions:
             - name: since
             - name: left
