--- a/collectors/python.d.plugin/haproxy/metadata.yaml
+++ b/collectors/python.d.plugin/haproxy/metadata.yaml
@@ -1,255 +1,229 @@
-name: haproxy
-title: COLLECTORNAME Monitoring
-duplicate_for_virtual_integrations:
-  list:
-    - '[Ubuntu](link to ubuntu)'
-    - '[Redhat](link to redhat)'
-overview:
-  operation:
-    description: This collector periodically does http requests to one or more {[Apache](link
-      to collector)} (<- CI will remove the curly brackets, they are for replacing
-      with the virtual integrations, to replace the link each time) web servers to
-      collect the metrics mod_status plugin that apache exposes
-  platforms:
-    description: If this collector can't run on some platforms specify them here and
-      set it to false, otherwise set this to true and this text will not be rendered,
-      instead a templated message will appear
-    use_templated_text: true
-  multi-instance:
-    boolean: true
-  permissions:
-    description: if there are any notable permission requirements, eg running as root
-      and so on, specify them here and set it to false, otherwise set it to true and
-      a templated message will appear
-    use_templated_text: true
-  related:
-    description: give a simple description if there are any other collectors related
-      to this collector. Example -> To get the most out of your apache servers, you
-      can monitor its processes for resources utilization and their log files to turn
-      them into real-time metrics. Check our related resources for more information.
-      (if not, leave empty)
-setup:
-  prerequisites:
-    list:
-      - title: Prerequisite title for heading
-        text: List like with dashes, TBD, use | and newline for multiline
-  behavior:
-    auto_detection:
-      description: The collector auto-detects apache web servers running on localhost
-        ports 80, 443, and 8080.
-    limits:
-      description: The collector is limited to x amount of tables or any other limitation,
-        leave empty if none
-    impact:
-      description: Is there any impact on the application when using the default configuration?
-        Maybe on a db collector having to many tables might slow down the db if collection
-        happens per second, leave empty if none
-  configuration:
-    file:
-      description: 'which file the user has to edit. Example: go.d/apache.conf'
-    options:
-      description: TBD, use | and newline for multiline
-      folding:
-        title: Config options
-        enabled: true
-      list:
-        - name: option name
-          description: option description
-          default: a number or a string
-          required: true or false
-    examples:
-      folding:
-        title: Config
-        enabled: false
-      list:
-        - name: Basic / else describe what this example is about
-          description: A basic example configuration / describe your example
-          data: input the example data in yaml format
-troubleshooting:
-  problems:
-    list:
-      - name: possible troubleshooting title
-        text: describe
-  debugging:
-    description: How to run this in debug mode? Use | and newline with indent, to
-      write in markdown
-  logs:
-    description: How can I monitor logs for this plugin?
-related_resources:
-  integrations:
-    list:
-      - apache
-      - weblog
-      - httpcheck
-      - etc
-    provide:
-      description: What info I can provide for other plugins that reference me? this
-        will only be visible in their end, they will scrape this text. Example ->
-        apps.plugin allows monitoring individual processes CPU, Memory, Disk I/O and
-        many more resources utilization.
+module_name: haproxy
+plugin_name: python.d.plugin
 alerts:
-  - name: '[haproxy_backend_server_status](https://gihtub.com/netdata/netdata/blob/master/health/health.d/haproxy.conf)'
+  - name: haproxy_backend_server_status
+    link: https://github.com/netdata/netdata/blob/master/health/health.d/haproxy.conf
     metric: haproxy_hs.down
     info: average number of failed haproxy backend servers over the last 10 seconds
     os: linux freebsd
 metrics:
-  description: some description for this section, or leave empty
   folding:
     title: Metrics
     enabled: false
-  scope:
-    global:
-      name: global
-      description: TBD
+  description: ''
+  availability: []
+  scopes:
+    - name: global
+      description: ''
       labels: []
       metrics:
         - name: haproxy_f.bin
+          availability: []
           description: Kilobytes In
           unit: KiB/s
+          chart_type: line
           dimensions:
             - name: a dimension per frontend server
         - name: haproxy_f.bout
+          availability: []
           description: Kilobytes Out
           unit: KiB/s
+          chart_type: line
           dimensions:
             - name: a dimension per frontend server
         - name: haproxy_f.scur
+          availability: []
           description: Sessions Active
           unit: sessions
+          chart_type: line
           dimensions:
             - name: a dimension per frontend server
         - name: haproxy_f.qcur
+          availability: []
           description: Session In Queue
           unit: sessions
+          chart_type: line
           dimensions:
             - name: a dimension per frontend server
         - name: haproxy_f.hrsp_1xx
+          availability: []
           description: HTTP responses with 1xx code
           unit: responses/s
+          chart_type: line
           dimensions:
             - name: a dimension per frontend server
         - name: haproxy_f.hrsp_2xx
+          availability: []
           description: HTTP responses with 2xx code
           unit: responses/s
+          chart_type: line
           dimensions:
             - name: a dimension per frontend server
         - name: haproxy_f.hrsp_3xx
+          availability: []
           description: HTTP responses with 3xx code
           unit: responses/s
+          chart_type: line
           dimensions:
             - name: a dimension per frontend server
         - name: haproxy_f.hrsp_4xx
+          availability: []
           description: HTTP responses with 4xx code
           unit: responses/s
+          chart_type: line
           dimensions:
             - name: a dimension per frontend server
         - name: haproxy_f.hrsp_5xx
+          availability: []
           description: HTTP responses with 5xx code
           unit: responses/s
+          chart_type: line
           dimensions:
             - name: a dimension per frontend server
         - name: haproxy_f.hrsp_other
+          availability: []
           description: HTTP responses with other codes (protocol error)
           unit: responses/s
+          chart_type: line
           dimensions:
             - name: a dimension per frontend server
         - name: haproxy_f.hrsp_total
+          availability: []
           description: HTTP responses
           unit: responses
+          chart_type: line
           dimensions:
             - name: a dimension per frontend server
         - name: haproxy_b.bin
+          availability: []
           description: Kilobytes In
           unit: KiB/s
+          chart_type: line
           dimensions:
             - name: a dimension per backend server
         - name: haproxy_b.bout
+          availability: []
           description: Kilobytes Out
           unit: KiB/s
+          chart_type: line
           dimensions:
             - name: a dimension per backend server
         - name: haproxy_b.scur
+          availability: []
           description: Sessions Active
           unit: sessions
+          chart_type: line
           dimensions:
             - name: a dimension per backend server
         - name: haproxy_b.qcur
+          availability: []
           description: Sessions In Queue
           unit: sessions
+          chart_type: line
           dimensions:
             - name: a dimension per backend server
         - name: haproxy_b.hrsp_1xx
+          availability: []
           description: HTTP responses with 1xx code
           unit: responses/s
+          chart_type: line
           dimensions:
             - name: a dimension per backend server
         - name: haproxy_b.hrsp_2xx
+          availability: []
           description: HTTP responses with 2xx code
           unit: responses/s
+          chart_type: line
           dimensions:
             - name: a dimension per backend server
         - name: haproxy_b.hrsp_3xx
+          availability: []
           description: HTTP responses with 3xx code
           unit: responses/s
+          chart_type: line
           dimensions:
             - name: a dimension per backend server
         - name: haproxy_b.hrsp_4xx
+          availability: []
           description: HTTP responses with 4xx code
           unit: responses/s
+          chart_type: line
           dimensions:
             - name: a dimension per backend server
         - name: haproxy_b.hrsp_5xx
+          availability: []
           description: HTTP responses with 5xx code
           unit: responses/s
+          chart_type: line
           dimensions:
             - name: a dimension per backend server
         - name: haproxy_b.hrsp_other
+          availability: []
           description: HTTP responses with other codes (protocol error)
           unit: responses/s
+          chart_type: line
           dimensions:
             - name: a dimension per backend server
         - name: haproxy_b.hrsp_total
+          availability: []
           description: HTTP responses (total)
           unit: responses/s
+          chart_type: line
           dimensions:
             - name: a dimension per backend server
         - name: haproxy_b.qtime
+          availability: []
           description: The average queue time over the 1024 last requests
           unit: milliseconds
+          chart_type: line
           dimensions:
             - name: a dimension per backend server
         - name: haproxy_b.ctime
+          availability: []
           description: The average connect time over the 1024 last requests
           unit: milliseconds
+          chart_type: line
           dimensions:
             - name: a dimension per backend server
         - name: haproxy_b.rtime
+          availability: []
           description: The average response time over the 1024 last requests
           unit: milliseconds
+          chart_type: line
           dimensions:
             - name: a dimension per backend server
         - name: haproxy_b.ttime
+          availability: []
           description: The average total session time over the 1024 last requests
           unit: milliseconds
+          chart_type: line
           dimensions:
             - name: a dimension per backend server
         - name: haproxy_hs.down
+          availability: []
           description: Backend Servers In DOWN State
           unit: failed servers
+          chart_type: line
           dimensions:
             - name: a dimension per backend server
         - name: haproxy_hs.up
+          availability: []
           description: Backend Servers In UP State
           unit: health servers
+          chart_type: line
           dimensions:
             - name: a dimension per backend server
         - name: haproxy_hb.down
+          availability: []
           description: Is Backend Failed?
           unit: boolean
+          chart_type: line
           dimensions:
             - name: a dimension per backend server
         - name: haproxy.idle
+          availability: []
           description: The Ratio Of Polling Time Vs Total Time
           unit: percentage
+          chart_type: line
           dimensions:
             - name: idle
