--- a/collectors/python.d.plugin/memcached/metadata.yaml
+++ b/collectors/python.d.plugin/memcached/metadata.yaml
@@ -1,193 +1,136 @@
-name: memcached
-title: COLLECTORNAME Monitoring
-duplicate_for_virtual_integrations:
-  list:
-    - '[Ubuntu](link to ubuntu)'
-    - '[Redhat](link to redhat)'
-overview:
-  operation:
-    description: This collector periodically does http requests to one or more {[Apache](link
-      to collector)} (<- CI will remove the curly brackets, they are for replacing
-      with the virtual integrations, to replace the link each time) web servers to
-      collect the metrics mod_status plugin that apache exposes
-  platforms:
-    description: If this collector can't run on some platforms specify them here and
-      set it to false, otherwise set this to true and this text will not be rendered,
-      instead a templated message will appear
-    use_templated_text: true
-  multi-instance:
-    boolean: true
-  permissions:
-    description: if there are any notable permission requirements, eg running as root
-      and so on, specify them here and set it to false, otherwise set it to true and
-      a templated message will appear
-    use_templated_text: true
-  related:
-    description: give a simple description if there are any other collectors related
-      to this collector. Example -> To get the most out of your apache servers, you
-      can monitor its processes for resources utilization and their log files to turn
-      them into real-time metrics. Check our related resources for more information.
-      (if not, leave empty)
-setup:
-  prerequisites:
-    list:
-      - title: Prerequisite title for heading
-        text: List like with dashes, TBD, use | and newline for multiline
-  behavior:
-    auto_detection:
-      description: The collector auto-detects apache web servers running on localhost
-        ports 80, 443, and 8080.
-    limits:
-      description: The collector is limited to x amount of tables or any other limitation,
-        leave empty if none
-    impact:
-      description: Is there any impact on the application when using the default configuration?
-        Maybe on a db collector having to many tables might slow down the db if collection
-        happens per second, leave empty if none
-  configuration:
-    file:
-      description: 'which file the user has to edit. Example: go.d/apache.conf'
-    options:
-      description: TBD, use | and newline for multiline
-      folding:
-        title: Config options
-        enabled: true
-      list:
-        - name: option name
-          description: option description
-          default: a number or a string
-          required: true or false
-    examples:
-      folding:
-        title: Config
-        enabled: false
-      list:
-        - name: Basic / else describe what this example is about
-          description: A basic example configuration / describe your example
-          data: input the example data in yaml format
-troubleshooting:
-  problems:
-    list:
-      - name: possible troubleshooting title
-        text: describe
-  debugging:
-    description: How to run this in debug mode? Use | and newline with indent, to
-      write in markdown
-  logs:
-    description: How can I monitor logs for this plugin?
-related_resources:
-  integrations:
-    list:
-      - apache
-      - weblog
-      - httpcheck
-      - etc
-    provide:
-      description: What info I can provide for other plugins that reference me? this
-        will only be visible in their end, they will scrape this text. Example ->
-        apps.plugin allows monitoring individual processes CPU, Memory, Disk I/O and
-        many more resources utilization.
+module_name: memcached
+plugin_name: python.d.plugin
 alerts:
-  - name: '[memcached_cache_memory_usage](https://gihtub.com/netdata/netdata/blob/master/health/health.d/memcached.conf)'
+  - name: memcached_cache_memory_usage
+    link: https://github.com/netdata/netdata/blob/master/health/health.d/memcached.conf
     metric: memcached.cache
     info: cache memory utilization
     os: freebsd
-  - name: '[memcached_cache_fill_rate](https://gihtub.com/netdata/netdata/blob/master/health/health.d/memcached.conf)'
+  - name: memcached_cache_fill_rate
+    link: https://github.com/netdata/netdata/blob/master/health/health.d/memcached.conf
     metric: memcached.cache
     info: average rate the cache fills up (positive), or frees up (negative) space
       over the last hour
     os: freebsd
 metrics:
-  description: some description for this section, or leave empty
   folding:
     title: Metrics
     enabled: false
-  scope:
-    global:
-      name: global
-      description: TBD
+  description: ''
+  availability: []
+  scopes:
+    - name: global
+      description: ''
       labels: []
       metrics:
         - name: memcached.cache
+          availability: []
           description: Cache Size
           unit: MiB
+          chart_type: stacked
           dimensions:
             - name: available
             - name: used
         - name: memcached.net
+          availability: []
           description: Network
           unit: kilobits/s
+          chart_type: area
           dimensions:
             - name: in
             - name: out
         - name: memcached.connections
+          availability: []
           description: Connections
           unit: connections/s
+          chart_type: line
           dimensions:
             - name: current
             - name: rejected
             - name: total
         - name: memcached.items
+          availability: []
           description: Items
           unit: items
+          chart_type: line
           dimensions:
             - name: current
             - name: total
         - name: memcached.evicted_reclaimed
+          availability: []
           description: Evicted and Reclaimed Items
           unit: items
+          chart_type: line
           dimensions:
             - name: reclaimed
             - name: evicted
         - name: memcached.get
+          availability: []
           description: Get Requests
           unit: requests
+          chart_type: stacked
           dimensions:
             - name: hints
             - name: misses
         - name: memcached.get_rate
+          availability: []
           description: Get Request Rate
           unit: requests/s
+          chart_type: line
           dimensions:
             - name: rate
         - name: memcached.set_rate
+          availability: []
           description: Set Request Rate
           unit: requests/s
+          chart_type: line
           dimensions:
             - name: rate
         - name: memcached.delete
+          availability: []
           description: Delete Requests
           unit: requests
+          chart_type: stacked
           dimensions:
             - name: hits
             - name: misses
         - name: memcached.cas
+          availability: []
           description: Check and Set Requests
           unit: requests
+          chart_type: stacked
           dimensions:
             - name: hits
             - name: misses
             - name: bad value
         - name: memcached.increment
+          availability: []
           description: Increment Requests
           unit: requests
+          chart_type: stacked
           dimensions:
             - name: hits
             - name: misses
         - name: memcached.decrement
+          availability: []
           description: Decrement Requests
           unit: requests
+          chart_type: stacked
           dimensions:
             - name: hits
             - name: misses
         - name: memcached.touch
+          availability: []
           description: Touch Requests
           unit: requests
+          chart_type: stacked
           dimensions:
             - name: hits
             - name: misses
         - name: memcached.touch_rate
+          availability: []
           description: Touch Request Rate
           unit: requests/s
+          chart_type: line
           dimensions:
             - name: rate
