--- a/collectors/python.d.plugin/nvidia_smi/metadata.yaml
+++ b/collectors/python.d.plugin/nvidia_smi/metadata.yaml
@@ -1,184 +1,127 @@
-name: nvidia_smi
-title: COLLECTORNAME Monitoring
-duplicate_for_virtual_integrations:
-  list:
-    - '[Ubuntu](link to ubuntu)'
-    - '[Redhat](link to redhat)'
-overview:
-  operation:
-    description: This collector periodically does http requests to one or more {[Apache](link
-      to collector)} (<- CI will remove the curly brackets, they are for replacing
-      with the virtual integrations, to replace the link each time) web servers to
-      collect the metrics mod_status plugin that apache exposes
-  platforms:
-    description: If this collector can't run on some platforms specify them here and
-      set it to false, otherwise set this to true and this text will not be rendered,
-      instead a templated message will appear
-    use_templated_text: true
-  multi-instance:
-    boolean: true
-  permissions:
-    description: if there are any notable permission requirements, eg running as root
-      and so on, specify them here and set it to false, otherwise set it to true and
-      a templated message will appear
-    use_templated_text: true
-  related:
-    description: give a simple description if there are any other collectors related
-      to this collector. Example -> To get the most out of your apache servers, you
-      can monitor its processes for resources utilization and their log files to turn
-      them into real-time metrics. Check our related resources for more information.
-      (if not, leave empty)
-setup:
-  prerequisites:
-    list:
-      - title: Prerequisite title for heading
-        text: List like with dashes, TBD, use | and newline for multiline
-  behavior:
-    auto_detection:
-      description: The collector auto-detects apache web servers running on localhost
-        ports 80, 443, and 8080.
-    limits:
-      description: The collector is limited to x amount of tables or any other limitation,
-        leave empty if none
-    impact:
-      description: Is there any impact on the application when using the default configuration?
-        Maybe on a db collector having to many tables might slow down the db if collection
-        happens per second, leave empty if none
-  configuration:
-    file:
-      description: 'which file the user has to edit. Example: go.d/apache.conf'
-    options:
-      description: TBD, use | and newline for multiline
-      folding:
-        title: Config options
-        enabled: true
-      list:
-        - name: option name
-          description: option description
-          default: a number or a string
-          required: true or false
-    examples:
-      folding:
-        title: Config
-        enabled: false
-      list:
-        - name: Basic / else describe what this example is about
-          description: A basic example configuration / describe your example
-          data: input the example data in yaml format
-troubleshooting:
-  problems:
-    list:
-      - name: possible troubleshooting title
-        text: describe
-  debugging:
-    description: How to run this in debug mode? Use | and newline with indent, to
-      write in markdown
-  logs:
-    description: How can I monitor logs for this plugin?
-related_resources:
-  integrations:
-    list:
-      - apache
-      - weblog
-      - httpcheck
-      - etc
-    provide:
-      description: What info I can provide for other plugins that reference me? this
-        will only be visible in their end, they will scrape this text. Example ->
-        apps.plugin allows monitoring individual processes CPU, Memory, Disk I/O and
-        many more resources utilization.
+module_name: nvidia_smi
+plugin_name: python.d.plugin
 alerts: []
 metrics:
-  description: some description for this section, or leave empty
   folding:
     title: Metrics
     enabled: false
-  scope:
-    GPU:
-      name: GPU
-      description: TBD
+  description: ''
+  availability: []
+  scopes:
+    - name: GPU
+      description: ''
       labels: []
       metrics:
         - name: nvidia_smi.pci_bandwidth
+          availability: []
           description: PCI Express Bandwidth Utilization
           unit: KiB/s
+          chart_type: area
           dimensions:
             - name: rx
             - name: tx
         - name: nvidia_smi.pci_bandwidth_percent
+          availability: []
           description: PCI Express Bandwidth Percent
           unit: percentage
+          chart_type: area
           dimensions:
             - name: rx_percent
             - name: tx_percent
         - name: nvidia_smi.fan_speed
+          availability: []
           description: Fan Speed
           unit: percentage
+          chart_type: line
           dimensions:
             - name: speed
         - name: nvidia_smi.gpu_utilization
+          availability: []
           description: GPU Utilization
           unit: percentage
+          chart_type: line
           dimensions:
             - name: utilization
         - name: nvidia_smi.mem_utilization
+          availability: []
           description: Memory Bandwidth Utilization
           unit: percentage
+          chart_type: line
           dimensions:
             - name: utilization
         - name: nvidia_smi.encoder_utilization
+          availability: []
           description: Encoder/Decoder Utilization
           unit: percentage
+          chart_type: line
           dimensions:
             - name: encoder
             - name: decoder
         - name: nvidia_smi.memory_allocated
+          availability: []
           description: Memory Usage
           unit: MiB
+          chart_type: stacked
           dimensions:
             - name: free
             - name: used
         - name: nvidia_smi.bar1_memory_usage
+          availability: []
           description: Bar1 Memory Usage
           unit: MiB
+          chart_type: stacked
           dimensions:
             - name: free
             - name: used
         - name: nvidia_smi.temperature
+          availability: []
           description: Temperature
           unit: celsius
+          chart_type: line
           dimensions:
             - name: temp
         - name: nvidia_smi.clocks
+          availability: []
           description: Clock Frequencies
           unit: MHz
+          chart_type: line
           dimensions:
             - name: graphics
             - name: video
             - name: sm
             - name: mem
         - name: nvidia_smi.power
+          availability: []
           description: Power Utilization
           unit: Watts
+          chart_type: line
           dimensions:
             - name: power
         - name: nvidia_smi.power_state
+          availability: []
           description: Power State
           unit: state
+          chart_type: line
           dimensions:
             - name: a dimension per {power_state}
         - name: nvidia_smi.processes_mem
+          availability: []
           description: Memory Used by Each Process
           unit: MiB
+          chart_type: stacked
           dimensions:
             - name: a dimension per process
         - name: nvidia_smi.user_mem
+          availability: []
           description: Memory Used by Each User
           unit: MiB
+          chart_type: stacked
           dimensions:
             - name: a dimension per user
         - name: nvidia_smi.user_num
+          availability: []
           description: Number of User on GPU
           unit: num
+          chart_type: line
           dimensions:
             - name: users
