--- a/collectors/python.d.plugin/riakkv/metadata.yaml
+++ b/collectors/python.d.plugin/riakkv/metadata.yaml
@@ -1,163 +1,93 @@
-name: riakkv
-title: COLLECTORNAME Monitoring
-duplicate_for_virtual_integrations:
-  list:
-    - '[Ubuntu](link to ubuntu)'
-    - '[Redhat](link to redhat)'
-overview:
-  operation:
-    description: This collector periodically does http requests to one or more {[Apache](link
-      to collector)} (<- CI will remove the curly brackets, they are for replacing
-      with the virtual integrations, to replace the link each time) web servers to
-      collect the metrics mod_status plugin that apache exposes
-  platforms:
-    description: If this collector can't run on some platforms specify them here and
-      set it to false, otherwise set this to true and this text will not be rendered,
-      instead a templated message will appear
-    use_templated_text: true
-  multi-instance:
-    boolean: true
-  permissions:
-    description: if there are any notable permission requirements, eg running as root
-      and so on, specify them here and set it to false, otherwise set it to true and
-      a templated message will appear
-    use_templated_text: true
-  related:
-    description: give a simple description if there are any other collectors related
-      to this collector. Example -> To get the most out of your apache servers, you
-      can monitor its processes for resources utilization and their log files to turn
-      them into real-time metrics. Check our related resources for more information.
-      (if not, leave empty)
-setup:
-  prerequisites:
-    list:
-      - title: Prerequisite title for heading
-        text: List like with dashes, TBD, use | and newline for multiline
-  behavior:
-    auto_detection:
-      description: The collector auto-detects apache web servers running on localhost
-        ports 80, 443, and 8080.
-    limits:
-      description: The collector is limited to x amount of tables or any other limitation,
-        leave empty if none
-    impact:
-      description: Is there any impact on the application when using the default configuration?
-        Maybe on a db collector having to many tables might slow down the db if collection
-        happens per second, leave empty if none
-  configuration:
-    file:
-      description: 'which file the user has to edit. Example: go.d/apache.conf'
-    options:
-      description: TBD, use | and newline for multiline
-      folding:
-        title: Config options
-        enabled: true
-      list:
-        - name: option name
-          description: option description
-          default: a number or a string
-          required: true or false
-    examples:
-      folding:
-        title: Config
-        enabled: false
-      list:
-        - name: Basic / else describe what this example is about
-          description: A basic example configuration / describe your example
-          data: input the example data in yaml format
-troubleshooting:
-  problems:
-    list:
-      - name: possible troubleshooting title
-        text: describe
-  debugging:
-    description: How to run this in debug mode? Use | and newline with indent, to
-      write in markdown
-  logs:
-    description: How can I monitor logs for this plugin?
-related_resources:
-  integrations:
-    list:
-      - apache
-      - weblog
-      - httpcheck
-      - etc
-    provide:
-      description: What info I can provide for other plugins that reference me? this
-        will only be visible in their end, they will scrape this text. Example ->
-        apps.plugin allows monitoring individual processes CPU, Memory, Disk I/O and
-        many more resources utilization.
+module_name: riakkv
+plugin_name: python.d.plugin
 alerts:
-  - name: '[riakkv_1h_kv_get_mean_latency](https://gihtub.com/netdata/netdata/blob/master/health/health.d/riakkv.conf)'
+  - name: riakkv_1h_kv_get_mean_latency
+    link: https://github.com/netdata/netdata/blob/master/health/health.d/riakkv.conf
     metric: riak.kv.latency.get
     info: average time between reception of client GET request and subsequent response
       to client over the last hour
     os: '*'
-  - name: '[riakkv_kv_get_slow](https://gihtub.com/netdata/netdata/blob/master/health/health.d/riakkv.conf)'
+  - name: riakkv_kv_get_slow
+    link: https://github.com/netdata/netdata/blob/master/health/health.d/riakkv.conf
     metric: riak.kv.latency.get
     info: average time between reception of client GET request and subsequent response
       to the client over the last 3 minutes, compared to the average over the last
       hour
     os: '*'
-  - name: '[riakkv_1h_kv_put_mean_latency](https://gihtub.com/netdata/netdata/blob/master/health/health.d/riakkv.conf)'
+  - name: riakkv_1h_kv_put_mean_latency
+    link: https://github.com/netdata/netdata/blob/master/health/health.d/riakkv.conf
     metric: riak.kv.latency.put
     info: average time between reception of client PUT request and subsequent response
       to the client over the last hour
     os: '*'
-  - name: '[riakkv_kv_put_slow](https://gihtub.com/netdata/netdata/blob/master/health/health.d/riakkv.conf)'
+  - name: riakkv_kv_put_slow
+    link: https://github.com/netdata/netdata/blob/master/health/health.d/riakkv.conf
     metric: riak.kv.latency.put
     info: average time between reception of client PUT request and subsequent response
       to the client over the last 3 minutes, compared to the average over the last
       hour
     os: '*'
-  - name: '[riakkv_list_keys_active](https://gihtub.com/netdata/netdata/blob/master/health/health.d/riakkv.conf)'
+  - name: riakkv_list_keys_active
+    link: https://github.com/netdata/netdata/blob/master/health/health.d/riakkv.conf
     metric: riak.core.fsm_active
     info: number of currently running list keys finite state machines
     os: '*'
 metrics:
-  description: some description for this section, or leave empty
   folding:
     title: Metrics
     enabled: false
-  scope:
-    global:
-      name: global
-      description: TBD
+  description: ''
+  availability: []
+  scopes:
+    - name: global
+      description: ''
       labels: []
       metrics:
         - name: riak.kv.throughput
+          availability: []
           description: Reads & writes coordinated by this node
           unit: operations/s
+          chart_type: line
           dimensions:
             - name: gets
             - name: puts
         - name: riak.dt.vnode_updates
+          availability: []
           description: Update operations coordinated by local vnodes by data type
           unit: operations/s
+          chart_type: line
           dimensions:
             - name: counters
             - name: sets
             - name: maps
         - name: riak.search
+          availability: []
           description: Search queries on the node
           unit: queries/s
+          chart_type: line
           dimensions:
             - name: queries
         - name: riak.search.documents
+          availability: []
           description: Documents indexed by search
           unit: documents/s
+          chart_type: line
           dimensions:
             - name: indexed
         - name: riak.consistent.operations
+          availability: []
           description: Consistent node operations
           unit: operations/s
+          chart_type: line
           dimensions:
             - name: gets
             - name: puts
         - name: riak.kv.latency.get
+          availability: []
           description: Time between reception of a client GET request and subsequent
             response to client
           unit: ms
+          chart_type: line
           dimensions:
             - name: mean
             - name: median
@@ -165,9 +95,11 @@ metrics:
             - name: '99'
             - name: '100'
         - name: riak.kv.latency.put
+          availability: []
           description: Time between reception of a client PUT request and subsequent
             response to client
           unit: ms
+          chart_type: line
           dimensions:
             - name: mean
             - name: median
@@ -175,8 +107,10 @@ metrics:
             - name: '99'
             - name: '100'
         - name: riak.dt.latency.counter_merge
+          availability: []
           description: Time it takes to perform an Update Counter operation
           unit: ms
+          chart_type: line
           dimensions:
             - name: mean
             - name: median
@@ -184,8 +118,10 @@ metrics:
             - name: '99'
             - name: '100'
         - name: riak.dt.latency.set_merge
+          availability: []
           description: Time it takes to perform an Update Set operation
           unit: ms
+          chart_type: line
           dimensions:
             - name: mean
             - name: median
@@ -193,8 +129,10 @@ metrics:
             - name: '99'
             - name: '100'
         - name: riak.dt.latency.map_merge
+          availability: []
           description: Time it takes to perform an Update Map operation
           unit: ms
+          chart_type: line
           dimensions:
             - name: mean
             - name: median
@@ -202,8 +140,10 @@ metrics:
             - name: '99'
             - name: '100'
         - name: riak.search.latency.query
+          availability: []
           description: Search query latency
           unit: ms
+          chart_type: line
           dimensions:
             - name: median
             - name: min
@@ -212,8 +152,10 @@ metrics:
             - name: '999'
             - name: max
         - name: riak.search.latency.index
+          availability: []
           description: Time it takes Search to index a new document
           unit: ms
+          chart_type: line
           dimensions:
             - name: median
             - name: min
@@ -222,8 +164,10 @@ metrics:
             - name: '999'
             - name: max
         - name: riak.consistent.latency.get
+          availability: []
           description: Strongly consistent read latency
           unit: ms
+          chart_type: line
           dimensions:
             - name: mean
             - name: median
@@ -231,8 +175,10 @@ metrics:
             - name: '99'
             - name: '100'
         - name: riak.consistent.latency.put
+          availability: []
           description: Strongly consistent write latency
           unit: ms
+          chart_type: line
           dimensions:
             - name: mean
             - name: median
@@ -240,20 +186,26 @@ metrics:
             - name: '99'
             - name: '100'
         - name: riak.vm
+          availability: []
           description: Total processes running in the Erlang VM
           unit: total
+          chart_type: line
           dimensions:
             - name: processes
         - name: riak.vm.memory.processes
+          availability: []
           description: Memory allocated & used by Erlang processes
           unit: MB
+          chart_type: line
           dimensions:
             - name: allocated
             - name: used
         - name: riak.kv.siblings_encountered.get
+          availability: []
           description: Number of siblings encountered during GET operations by this
             node during the past minute
           unit: siblings
+          chart_type: line
           dimensions:
             - name: mean
             - name: median
@@ -261,8 +213,10 @@ metrics:
             - name: '99'
             - name: '100'
         - name: riak.kv.objsize.get
+          availability: []
           description: Object size encountered by this node during the past minute
           unit: KB
+          chart_type: line
           dimensions:
             - name: mean
             - name: median
@@ -270,9 +224,11 @@ metrics:
             - name: '99'
             - name: '100'
         - name: riak.search.vnodeq_size
+          availability: []
           description: Number of unprocessed messages in the vnode message queues
             of Search on this node in the past minute
           unit: messages
+          chart_type: line
           dimensions:
             - name: mean
             - name: median
@@ -280,38 +236,50 @@ metrics:
             - name: '99'
             - name: '100'
         - name: riak.search.index
+          availability: []
           description: Number of document index errors encountered by Search
           unit: errors
+          chart_type: line
           dimensions:
             - name: errors
         - name: riak.core.protobuf_connections
+          availability: []
           description: Protocol buffer connections by status
           unit: connections
+          chart_type: line
           dimensions:
             - name: active
         - name: riak.core.repairs
+          availability: []
           description: Number of repair operations this node has coordinated
           unit: repairs
+          chart_type: line
           dimensions:
             - name: read
         - name: riak.core.fsm_active
+          availability: []
           description: Active finite state machines by kind
           unit: fsms
+          chart_type: line
           dimensions:
             - name: get
             - name: put
             - name: secondary index
             - name: list keys
         - name: riak.core.fsm_rejected
+          availability: []
           description: Finite state machines being rejected by Sidejobs overload protection
           unit: fsms
+          chart_type: line
           dimensions:
             - name: get
             - name: put
         - name: riak.search.index
+          availability: []
           description: Number of writes to Search failed due to bad data format by
             reason
           unit: writes
+          chart_type: line
           dimensions:
             - name: bad_entry
             - name: extract_fail
