--- a/collectors/python.d.plugin/varnish/metadata.yaml
+++ b/collectors/python.d.plugin/varnish/metadata.yaml
@@ -1,159 +1,92 @@
-name: varnish
-title: COLLECTORNAME Monitoring
-duplicate_for_virtual_integrations:
-  list:
-    - '[Ubuntu](link to ubuntu)'
-    - '[Redhat](link to redhat)'
-overview:
-  operation:
-    description: This collector periodically does http requests to one or more {[Apache](link
-      to collector)} (<- CI will remove the curly brackets, they are for replacing
-      with the virtual integrations, to replace the link each time) web servers to
-      collect the metrics mod_status plugin that apache exposes
-  platforms:
-    description: If this collector can't run on some platforms specify them here and
-      set it to false, otherwise set this to true and this text will not be rendered,
-      instead a templated message will appear
-    use_templated_text: true
-  multi-instance:
-    boolean: true
-  permissions:
-    description: if there are any notable permission requirements, eg running as root
-      and so on, specify them here and set it to false, otherwise set it to true and
-      a templated message will appear
-    use_templated_text: true
-  related:
-    description: give a simple description if there are any other collectors related
-      to this collector. Example -> To get the most out of your apache servers, you
-      can monitor its processes for resources utilization and their log files to turn
-      them into real-time metrics. Check our related resources for more information.
-      (if not, leave empty)
-setup:
-  prerequisites:
-    list:
-      - title: Prerequisite title for heading
-        text: List like with dashes, TBD, use | and newline for multiline
-  behavior:
-    auto_detection:
-      description: The collector auto-detects apache web servers running on localhost
-        ports 80, 443, and 8080.
-    limits:
-      description: The collector is limited to x amount of tables or any other limitation,
-        leave empty if none
-    impact:
-      description: Is there any impact on the application when using the default configuration?
-        Maybe on a db collector having to many tables might slow down the db if collection
-        happens per second, leave empty if none
-  configuration:
-    file:
-      description: 'which file the user has to edit. Example: go.d/apache.conf'
-    options:
-      description: TBD, use | and newline for multiline
-      folding:
-        title: Config options
-        enabled: true
-      list:
-        - name: option name
-          description: option description
-          default: a number or a string
-          required: true or false
-    examples:
-      folding:
-        title: Config
-        enabled: false
-      list:
-        - name: Basic / else describe what this example is about
-          description: A basic example configuration / describe your example
-          data: input the example data in yaml format
-troubleshooting:
-  problems:
-    list:
-      - name: possible troubleshooting title
-        text: describe
-  debugging:
-    description: How to run this in debug mode? Use | and newline with indent, to
-      write in markdown
-  logs:
-    description: How can I monitor logs for this plugin?
-related_resources:
-  integrations:
-    list:
-      - apache
-      - weblog
-      - httpcheck
-      - etc
-    provide:
-      description: What info I can provide for other plugins that reference me? this
-        will only be visible in their end, they will scrape this text. Example ->
-        apps.plugin allows monitoring individual processes CPU, Memory, Disk I/O and
-        many more resources utilization.
+module_name: varnish
+plugin_name: python.d.plugin
 alerts: []
 metrics:
-  description: some description for this section, or leave empty
   folding:
     title: Metrics
     enabled: false
-  scope:
-    global:
-      name: global
-      description: TBD
+  description: ''
+  availability: []
+  scopes:
+    - name: global
+      description: ''
       labels: []
       metrics:
         - name: varnish.session_connection
+          availability: []
           description: Connections Statistics
           unit: connections/s
+          chart_type: line
           dimensions:
             - name: accepted
             - name: dropped
         - name: varnish.client_requests
+          availability: []
           description: Client Requests
           unit: requests/s
+          chart_type: line
           dimensions:
             - name: received
         - name: varnish.all_time_hit_rate
+          availability: []
           description: All History Hit Rate Ratio
           unit: percentage
+          chart_type: stacked
           dimensions:
             - name: hit
             - name: miss
             - name: hitpass
         - name: varnish.current_poll_hit_rate
+          availability: []
           description: Current Poll Hit Rate Ratio
           unit: percentage
+          chart_type: stacked
           dimensions:
             - name: hit
             - name: miss
             - name: hitpass
         - name: varnish.cached_objects_expired
+          availability: []
           description: Expired Objects
           unit: expired/s
+          chart_type: line
           dimensions:
             - name: objects
         - name: varnish.cached_objects_nuked
+          availability: []
           description: Least Recently Used Nuked Objects
           unit: nuked/s
+          chart_type: line
           dimensions:
             - name: objects
         - name: varnish.threads_total
+          availability: []
           description: Number Of Threads In All Pools
           unit: number
+          chart_type: line
           dimensions:
             - name: None
         - name: varnish.threads_statistics
+          availability: []
           description: Threads Statistics
           unit: threads/s
+          chart_type: line
           dimensions:
             - name: created
             - name: failed
             - name: limited
         - name: varnish.threads_queue_len
+          availability: []
           description: Current Queue Length
           unit: requests
+          chart_type: line
           dimensions:
             - name: in queue
         - name: varnish.backend_connections
+          availability: []
           description: Backend Connections Statistics
           unit: connections/s
+          chart_type: line
           dimensions:
             - name: successful
             - name: unhealthy
@@ -162,51 +95,63 @@ metrics:
             - name: recycled
             - name: failed
         - name: varnish.backend_requests
+          availability: []
           description: Requests To The Backend
           unit: requests/s
+          chart_type: line
           dimensions:
             - name: sent
         - name: varnish.esi_statistics
+          availability: []
           description: ESI Statistics
           unit: problems/s
+          chart_type: line
           dimensions:
             - name: errors
             - name: warnings
         - name: varnish.memory_usage
+          availability: []
           description: Memory Usage
           unit: MiB
+          chart_type: stacked
           dimensions:
             - name: free
             - name: allocated
         - name: varnish.uptime
+          availability: []
           description: Uptime
           unit: seconds
+          chart_type: line
           dimensions:
             - name: uptime
-    Backend:
-      name: Backend
-      description: TBD
+    - name: Backend
+      description: ''
       labels: []
       metrics:
         - name: varnish.backend
+          availability: []
           description: Backend {backend_name}
           unit: kilobits/s
+          chart_type: area
           dimensions:
             - name: header
             - name: body
-    Storage:
-      name: Storage
-      description: TBD
+    - name: Storage
+      description: ''
       labels: []
       metrics:
         - name: varnish.storage_usage
+          availability: []
           description: Storage {storage_name} Usage
           unit: KiB
+          chart_type: stacked
           dimensions:
             - name: free
             - name: allocated
         - name: varnish.storage_alloc_objs
+          availability: []
           description: Storage {storage_name} Allocated Objects
           unit: objects
+          chart_type: line
           dimensions:
             - name: allocated
