--- a/collectors/xenstat.plugin/metadata.yaml
+++ b/collectors/xenstat.plugin/metadata.yaml
@@ -1,133 +1,55 @@
-name: xenstat.plugin
-title: COLLECTORNAME Monitoring
-duplicate_for_virtual_integrations:
-  list:
-    - '[Ubuntu](link to ubuntu)'
-    - '[Redhat](link to redhat)'
-overview:
-  operation:
-    description: This collector periodically does http requests to one or more {[Apache](link
-      to collector)} (<- CI will remove the curly brackets, they are for replacing
-      with the virtual integrations, to replace the link each time) web servers to
-      collect the metrics mod_status plugin that apache exposes
-  platforms:
-    description: If this collector can't run on some platforms specify them here and
-      set it to false, otherwise set this to true and this text will not be rendered,
-      instead a templated message will appear
-    use_templated_text: true
-  multi-instance:
-    boolean: true
-  permissions:
-    description: if there are any notable permission requirements, eg running as root
-      and so on, specify them here and set it to false, otherwise set it to true and
-      a templated message will appear
-    use_templated_text: true
-  related:
-    description: give a simple description if there are any other collectors related
-      to this collector. Example -> To get the most out of your apache servers, you
-      can monitor its processes for resources utilization and their log files to turn
-      them into real-time metrics. Check our related resources for more information.
-      (if not, leave empty)
-setup:
-  prerequisites:
-    list:
-      - title: Prerequisite title for heading
-        text: List like with dashes, TBD, use | and newline for multiline
-  behavior:
-    auto_detection:
-      description: The collector auto-detects apache web servers running on localhost
-        ports 80, 443, and 8080.
-    limits:
-      description: The collector is limited to x amount of tables or any other limitation,
-        leave empty if none
-    impact:
-      description: Is there any impact on the application when using the default configuration?
-        Maybe on a db collector having to many tables might slow down the db if collection
-        happens per second, leave empty if none
-  configuration:
-    file:
-      description: 'which file the user has to edit. Example: go.d/apache.conf'
-    options:
-      description: TBD, use | and newline for multiline
-      folding:
-        title: Config options
-        enabled: true
-      list:
-        - name: option name
-          description: option description
-          default: a number or a string
-          required: true or false
-    examples:
-      folding:
-        title: Config
-        enabled: false
-      list:
-        - name: Basic / else describe what this example is about
-          description: A basic example configuration / describe your example
-          data: input the example data in yaml format
-troubleshooting:
-  problems:
-    list:
-      - name: possible troubleshooting title
-        text: describe
-  debugging:
-    description: How to run this in debug mode? Use | and newline with indent, to
-      write in markdown
-  logs:
-    description: How can I monitor logs for this plugin?
-related_resources:
-  integrations:
-    list:
-      - apache
-      - weblog
-      - httpcheck
-      - etc
-    provide:
-      description: What info I can provide for other plugins that reference me? this
-        will only be visible in their end, they will scrape this text. Example ->
-        apps.plugin allows monitoring individual processes CPU, Memory, Disk I/O and
-        many more resources utilization.
+module_name: xenstat.plugin
+plugin_name: xenstat.plugin
 alerts: []
 metrics:
-  description: some description for this section, or leave empty
   folding:
     title: Metrics
     enabled: false
-  scope:
-    global:
-      name: global
-      description: TBD
+  description: ''
+  availability: []
+  scopes:
+    - name: global
+      description: ''
       labels: []
       metrics:
         - name: xenstat.mem
+          availability: []
           description: Memory Usage
           unit: MiB
+          chart_type: stacked
           dimensions:
             - name: free
             - name: used
         - name: xenstat.domains
+          availability: []
           description: Number of Domains
           unit: domains
+          chart_type: line
           dimensions:
             - name: domains
         - name: xenstat.cpus
+          availability: []
           description: Number of CPUs
           unit: cpus
+          chart_type: line
           dimensions:
             - name: cpus
         - name: xenstat.cpu_freq
+          availability: []
           description: CPU Frequency
           unit: MHz
+          chart_type: line
           dimensions:
             - name: frequency
-    xendomain:
-      name: xendomain
-      description: TBD
+    - name: xendomain
+      description: ''
       labels: []
       metrics:
         - name: xendomain.states
+          availability: []
           description: Domain States
           unit: boolean
+          chart_type: line
           dimensions:
             - name: running
             - name: blocked
@@ -136,69 +58,87 @@ metrics:
             - name: crashed
             - name: dying
         - name: xendomain.cpu
+          availability: []
           description: CPU Usage (100% = 1 core)
           unit: percentage
+          chart_type: line
           dimensions:
             - name: used
         - name: xendomain.mem
+          availability: []
           description: Memory Reservation
           unit: MiB
+          chart_type: line
           dimensions:
             - name: maximum
             - name: current
         - name: xendomain.vcpu
+          availability: []
           description: CPU Usage per VCPU
           unit: percentage
+          chart_type: line
           dimensions:
             - name: a dimension per vcpu
-    xendomain, vbd:
-      name: xendomain, vbd
-      description: TBD
+    - name: xendomain, vbd
+      description: ''
       labels: []
       metrics:
         - name: xendomain.oo_req_vbd
+          availability: []
           description: VBD{%u} Out Of Requests
           unit: requests/s
+          chart_type: line
           dimensions:
             - name: requests
         - name: xendomain.requests_vbd
+          availability: []
           description: VBD{%u} Requests
           unit: requests/s
+          chart_type: line
           dimensions:
             - name: read
             - name: write
         - name: xendomain.sectors_vbd
+          availability: []
           description: VBD{%u} Read/Written Sectors
           unit: sectors/s
+          chart_type: line
           dimensions:
             - name: read
             - name: write
-    xendomain, network:
-      name: xendomain, network
-      description: TBD
+    - name: xendomain, network
+      description: ''
       labels: []
       metrics:
         - name: xendomain.bytes_network
+          availability: []
           description: Network{%u} Received/Sent Bytes
           unit: kilobits/s
+          chart_type: line
           dimensions:
             - name: received
             - name: sent
         - name: xendomain.packets_network
+          availability: []
           description: Network{%u} Received/Sent Packets
           unit: packets/s
+          chart_type: line
           dimensions:
             - name: received
             - name: sent
         - name: xendomain.errors_network
+          availability: []
           description: Network{%u} Receive/Transmit Errors
           unit: errors/s
+          chart_type: line
           dimensions:
             - name: received
             - name: sent
         - name: xendomain.drops_network
+          availability: []
           description: Network{%u} Receive/Transmit Drops
           unit: drops/s
+          chart_type: line
           dimensions:
             - name: received
             - name: sent
