Add option 'use log timestamp' to select between log timestamps or collection timestamps

--- a/logsmanagement/logsmanagement.conf
+++ b/logsmanagement/logsmanagement.conf
@@ -1,6 +1,6 @@
 # ------------------------------------------------------------------------------
 # Netdata Logs Management configuration
-# See full explanation on https://github.com/netdata/netdata/blob/logs-manag-master/logsmanagement/README.md
+# See full explanation on https://github.com/netdata/netdata/blob/master/logsmanagement/README.md
 #
 # To add a new log source, a new section must be added in this 
 # file with at least the following settings:
@@ -10,7 +10,7 @@
 # 	log type = flb_generic
 #
 # For a list of all available log types, see:
-# https://github.com/netdata/netdata/blob/logs-manag-master/logsmanagement/README.md#types-of-available-collectors
+# https://github.com/netdata/netdata/blob/master/logsmanagement/README.md#types-of-available-collectors
 #
 # ------------------------------------------------------------------------------
 
@@ -22,9 +22,10 @@
 	log type = flb_kmsg
 
 	## Optional settings, common to all log source. 
-	## Uncomment to override global equivalents.
+	## Uncomment to override global equivalents in netdata.conf.
 	# update every = 1
 	# update timeout = 10
+	use log timestamp = no
 	# circular buffer max size MiB = 64
 	# circular buffer drop logs if full = no
 	# compression acceleration = 1
@@ -56,9 +57,10 @@
 	log type = flb_systemd
 
 	## Optional settings, common to all log source. 
-	## Uncomment to override global equivalents.
+	## Uncomment to override global equivalents in netdata.conf.
 	# update every = 1
 	# update timeout = 10
+	# use log timestamp = auto
 	# circular buffer max size MiB = 64
 	# circular buffer drop logs if full = no
 	# compression acceleration = 1
@@ -86,9 +88,10 @@
 	log type = flb_docker_events
 
 	## Optional settings, common to all log source. 
-	## Uncomment to override global equivalents.
+	## Uncomment to override global equivalents in netdata.conf.
 	# update every = 1
 	# update timeout = 10
+	# use log timestamp = auto
 	# circular buffer max size MiB = 64
 	# circular buffer drop logs if full = no
 	# compression acceleration = 1
@@ -126,9 +129,10 @@
 	log type = flb_web_log
 
 	## Optional settings, common to all log source. 
-	## Uncomment to override global equivalents.
+	## Uncomment to override global equivalents in netdata.conf.
 	# update every = 1
 	# update timeout = 10
+	# use log timestamp = auto
 	# circular buffer max size MiB = 64
 	# circular buffer drop logs if full = no
 	# compression acceleration = 1
@@ -176,9 +180,10 @@
 	log type = flb_web_log
 
 	## Optional settings, common to all log source. 
-	## Uncomment to override global equivalents.
+	## Uncomment to override global equivalents in netdata.conf.
 	# update every = 1
 	# update timeout = 10
+	# use log timestamp = auto
 	# circular buffer max size MiB = 64
 	# circular buffer drop logs if full = no
 	# compression acceleration = 1
@@ -223,9 +228,10 @@
 	log type = flb_generic
 
 	## Optional settings, common to all log source. 
-	## Uncomment to override global equivalents.
+	## Uncomment to override global equivalents in netdata.conf.
 	# update every = 1
 	# update timeout = 10
+	# use log timestamp = auto
 	# circular buffer max size MiB = 64
 	# circular buffer drop logs if full = no
 	# compression acceleration = 1
@@ -316,9 +322,10 @@
 	log type = flb_generic
 
 	## Optional settings, common to all log source. 
-	## Uncomment to override global equivalents.
+	## Uncomment to override global equivalents in netdata.conf.
 	# update every = 1
 	# update timeout = 10
+	# use log timestamp = auto
 	# circular buffer max size MiB = 64
 	# circular buffer drop logs if full = no
 	# compression acceleration = 1
@@ -373,9 +380,10 @@
 	log type = flb_generic
 
 	## Optional settings, common to all log source. 
-	## Uncomment to override global equivalents.
+	## Uncomment to override global equivalents in netdata.conf.
 	# update every = 1
 	# update timeout = 10
+	# use log timestamp = auto
 	# circular buffer max size MiB = 64
 	# circular buffer drop logs if full = no
 	# compression acceleration = 1
@@ -418,9 +426,10 @@
 	log type = flb_generic
 
 	## Optional settings, common to all log source. 
-	## Uncomment to override global equivalents.
+	## Uncomment to override global equivalents in netdata.conf.
 	# update every = 1
 	# update timeout = 10
+	# use log timestamp = auto
 	# circular buffer max size MiB = 64
 	# circular buffer drop logs if full = no
 	# compression acceleration = 1
@@ -469,9 +478,10 @@
 	log type = flb_syslog
 
 	## Optional settings, common to all log source. 
-	## Uncomment to override global equivalents.
+	## Uncomment to override global equivalents in netdata.conf.
 	# update every = 1
 	# update timeout = 10
+	# use log timestamp = auto
 	# circular buffer max size MiB = 64
 	# circular buffer drop logs if full = no
 	# compression acceleration = 1
@@ -512,9 +522,10 @@
 	log type = flb_syslog
 
 	## Optional settings, common to all log source. 
-	## Uncomment to override global equivalents.
+	## Uncomment to override global equivalents in netdata.conf.
 	# update every = 1
 	# update timeout = 10
+	# use log timestamp = auto
 	# circular buffer max size MiB = 64
 	# circular buffer drop logs if full = no
 	# compression acceleration = 1
@@ -554,9 +565,10 @@
 	log type = flb_serial
 
 	## Optional settings, common to all log source. 
-	## Uncomment to override global equivalents.
+	## Uncomment to override global equivalents in netdata.conf.
 	# update every = 1
 	# update timeout = 10
+	# use log timestamp = auto
 	# circular buffer max size MiB = 64
 	# circular buffer drop logs if full = no
 	# compression acceleration = 1
@@ -590,9 +602,10 @@
 	log type = flb_systemd
 
 	## Optional settings, common to all log source. 
-	## Uncomment to override global equivalents.
+	## Uncomment to override global equivalents in netdata.conf.
 	# update every = 1
 	# update timeout = 10
+	# use log timestamp = auto
 	# circular buffer max size MiB = 64
 	# circular buffer drop logs if full = no
 	# compression acceleration = 1
@@ -620,9 +633,10 @@
 	log type = flb_docker_events
 
 	## Optional settings, common to all log source. 
-	## Uncomment to override global equivalents.
+	## Uncomment to override global equivalents in netdata.conf.
 	# update every = 1
 	# update timeout = 10
+	# use log timestamp = auto
 	# circular buffer max size MiB = 64
 	# circular buffer drop logs if full = no
 	# compression acceleration = 1
@@ -649,9 +663,10 @@
 	log type = flb_generic
 
 	## Optional settings, common to all log source. 
-	## Uncomment to override global equivalents.
+	## Uncomment to override global equivalents in netdata.conf.
 	# update every = 1
 	# update timeout = 10
+	# use log timestamp = auto
 	# circular buffer max size MiB = 64
 	# circular buffer drop logs if full = no
 	# compression acceleration = 1
